# apm

./: .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  CODEOWNERS  Dockerfile.test  README.en.md  README.md  README.ru.md  config_example.yml  go.mod  go.sum  main.go  meson.build
.forgejo/workflows/: build-altlinux.yml  build-main.yml
.gear/: apm.spec  apm.tmpfiles  rules
.gear/tags/: list
.gear/upstream/: remotes
altlinux/: apm.spec  apm.tmpfiles
build-aux/altlinux/: apm.spec.in  prepare  rules
cmd/common/appstream/: swcat.go
cmd/common/dbus/: event.go
cmd/common/helper/: cmd.go  dbus.go  language.go  polkit.go  text.go  translate.go
cmd/common/icon/: service.go  swcat.go
cmd/common/reply/: event.go  preloader.go  response.go  spiner.go  translate.go
cmd/distrobox/: actions.go  commands.go  dbus.go
cmd/distrobox/api/: main.go
cmd/distrobox/dbus_event/: event.go
cmd/distrobox/os/: arch.go  database.go  provider.go  ubuntu.go
cmd/distrobox/service/: alt.go  arch.go  database.go  distrobox.go  provider.go  ubuntu.go
cmd/system/: actions.go  commands.go  dbus.go
cmd/system/apt/: actions.go  database.go  dialog.go  dialogInstall.go  errors.go
cmd/system/converter/: yaml.go
cmd/system/os/: alt.go  bootc.go  podman.go
cmd/system/package/: actions.go  alr.go  database.go  dialog.go  errors.go  kernel.go  stplr.go
cmd/system/service/: alt.go  bootc.go  config.go  database.go  host.go  podman.go  yaml.go
config/: config.go
data/: apm.service.in  apm.tmpfiles.in  config.yml  config_example.yml  install.sh  meson.build  org.altlinux.APM.User.service.in  org.altlinux.APM.conf.in  org.altlinux.APM.policy.in  org.altlinux.APM.service.in
data/apt-bridge/: 99-apm-update.conf  update-apm.lua
data/completion/bash/: apm
data/completion/fish/: apm.fish
data/completion/zsh/: _apm
data/dbus-config/: apm.conf
data/locales/: response.ru.toml  ru.yml
data/locales/ru/LC_MESSAGES/: apm.po
database/: init.go
dbus/: init.go
docs/: DBUS_API.md  HTTP_API.md
event/: dbus.go
include/: install-latest-apm.yml
internal/common/altfiles/: group.go  group_test.go  nsswitch.go  nsswitch_test.go  operations.go  passwd.go  passwd_test.go  service.go  service_test.go  syncconfig.go  syncgroups.go  syncgroups_test.go
internal/common/apmerr/: dbus.go  types.go  types_test.go
internal/common/app/: app.go  build_vars.go  config.go  config_test.go  database.go  dbus.go  logger.go  translator.go
internal/common/appstream/: swcat.go  swcat_test.go
internal/common/apt/: errors.go  helper.go  helper_test.go  parse.go  parser.go
internal/common/classify/: types.go
internal/common/cli/: command.go  flags.go  meta.go  signals.go  wrapper.go  wrapper_test.go
internal/common/command/: divider_writer.go  errors.go  interfaces.go  runner.go  runner_pty.go  runner_test.go
internal/common/config/: app.go  build_vars.go  config.go  database.go  dbus.go  example.go  logger.go  translator.go
internal/common/dbus_doc/: dbus_introspect.go  generator.go
internal/common/doc/: generator.go
internal/common/filter/: filter.go  filter_test.go  gorm.go
internal/common/helper/: cmd.go  cmd_test.go  dbus.go  format_test.go  polkit.go  text.go  text_test.go  translate.go
internal/common/http_server/: doc_server.go  generator.go  handler.go  openapi.go  registry.go  server.go  websocket.go
internal/common/icon/: database.go  service.go  service_test.go  swcat.go
internal/common/osutils/: osutils.go  osutils_test.go
internal/common/reply/: event.go  http.go  preloader.go  render_plain.go  render_tree.go  reporter.go  response.go  response_bench_test.go  response_test.go  translate.go
internal/common/sandbox/: alt.go  arch.go  database.go  database_test.go  distrobox.go  provider.go  provider_test.go  ubuntu.go
internal/common/service/: dbus.go  http.go
internal/common/swcat/: database.go  models.go  swcat.go  swcat_test.go
internal/common/testutil/: testutil.go
internal/common/version/: utils.go  utils_test.go
internal/common/wrapper/: wrapper.go
internal/distrobox/: actions.go  commands.go  dbus.go  doc.go  http.go  response.go
internal/distrobox/dialog/: selector.go
internal/distrobox/service/: alt.go  arch.go  database.go  database_test.go  distrobox.go  provider.go  provider_test.go  ubuntu.go
internal/domain/distrobox/: actions.go  actions_test.go  commands.go  dbus.go  doc.go  http.go  interfaces.go  response.go
internal/domain/kernel/: actions.go  actions_test.go  commands.go  dbus.go  doc.go  interfaces.go  response.go
internal/domain/repository/: actions.go  actions_test.go  commands.go  dbus.go  doc.go  http.go  interfaces.go  response.go
internal/domain/system/: actions.go  actions_test.go  commands.go  dbus.go  doc.go  http.go  interfaces.go  response.go
internal/kernel/: actions.go  commands.go  dbus.go  doc.go  response.go
internal/kernel/service/: kernel.go
internal/repo/: actions.go  commands.go  dbus.go  doc.go  http.go  response.go
internal/repo/service/: repo.go
internal/system/: actions.go  actions_test.go  commands.go  commands_test.go  dbus.go  doc.go  http.go  response.go
internal/system/appstream/: actions.go  commands.go  response.go
internal/system/dialog/: dialog.go  dialog_image.go
internal/system/package/: actions.go  database.go  dialog.go  kernel.go  (+2 more)
lib/: config.go  database.go  dbus.go  i18n.go  logger.go  pogreb.go
logger/: log.go
po/: POTFILES  apm.pot  create_pot  ru.po  update_po  update_po.sh  update_pot.sh
scripts/: get-version.sh  run-tests.sh  test-container-light.sh  test-container.sh  test-local.sh  test-repo-compat.sh
test/: main.go
tests/: README.md  TESTING.md
tests/binding/: apt_binding_test.go
tests/common/: helper_test.go  test_mutex.go
tests/distrobox/: distrobox_suite_test.go  distrobox_test.go
tests/integration/: dbus_test.go
tests/lib/: config_test.go
tests/mocks/: database_mock_test.go
tests/system/: actions_info_test.go  atomic_test.go  non_atomic_test.go  non_root_test.go  root_required_test.go  thread_safe_test.go  unit_test.go
(+150 files in other folders)
